@@ -99,6 +99,7 @@ Version 1.5.2 - CVS
   - Fixed spamcop web based reporting form (#1519673) and removed service
     type options from spamcop plugin.
   - Removed trailing ?> from function scripts.
+  - Added checks for non-existent backend to AddressBook class.
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
